--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,16 @@ spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 #JWT properties
 riyapola.app.jwtSecret = ===========================RIYAPOLA=Spring=============================
 riyapola.app.jwtExpirationMs=86400000
+
+#spring mail config
+spring.mail.host=smtp-relay.brevo.com
+spring.mail.port=587
+spring.mail.username=770c7e001@smtp-brevo.com
+spring.mail.password=ExGavnMC7JQBH5Ns
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.starttle.enable=true
+spring.mail.properties.mail.starttle.required=true
